--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
 
         // product swiper
         var swiper = new Swiper(".home-product_swiper", {
-            slidesPerView: 1,
+            slidesPerView: "auto",
             slidesPerGroup: 1,
             // loop: true,
             observeParents:true,
