--- a/inquiry.html
+++ b/inquiry.html
@@ -302,78 +302,78 @@
         </div>
 
         <div class="inquiry-form">
-            <form class="inquiry-form_content">
+            <form class="inquiry-form_content form-common">
                 <h2 class="inquiry-title"><span>INQUIRY FORM</span></h2>
                 <p>be sure to enter the correct information, thank you !</p>
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="inquiry-form_item">
+                        <div class="form-common_item">
                             <label for="">Inquiry subject<span>*</span></label>
                             <input type="text">
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="inquiry-form_item">
+                        <div class="form-common_item">
                             <label for="">Name<span>*</span></label>
                             <input type="text">
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="inquiry-form_item">
+                        <div class="form-common_item">
                             <label for="">Company<span>*</span></label>
                             <input type="text">
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="inquiry-form_item">
+                        <div class="form-common_item">
                             <label for="">Email<span>*</span></label>
                             <input type="text">
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="inquiry-form_item">
+                        <div class="form-common_item">
                             <label for="">Address</label>
                             <input type="text">
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="inquiry-form_item">
+                        <div class="form-common_item">
                             <label for="">City</label>
                             <input type="text">
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="inquiry-form_item">
+                        <div class="form-common_item">
                             <label for="">State/Province</label>
                             <input type="text">
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="inquiry-form_item">
+                        <div class="form-common_item">
                             <label for="">Zip/Postal code</label>
                             <input type="text">
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="inquiry-form_item">
+                        <div class="form-common_item">
                             <label for="">Country<span>*</span></label>
                             <input type="text">
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="inquiry-form_item">
+                        <div class="form-common_item">
                             <label for="">Tel</label>
                             <input type="text">
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="inquiry-form_item">
+                        <div class="form-common_item">
                             <label for="">Fax</label>
                             <input type="text">
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="inquiry-form_item">
+                        <div class="form-common_item">
                             <label for="">Attachment</label>
                             <div class="inquiry-form_attach d-flex align-items-center justify-content-between">
                                 <div class="inquiry-form_attach_main d-flex align-items-center">
@@ -390,7 +390,7 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="inquiry-form_item">
+                        <div class="form-common_item">
                             <label for="">Business Type</label>
                             <ul class="inquiry-form_list">
                                 <li class="inquiry-form_radioList">
@@ -431,13 +431,13 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="inquiry-form_item">
+                        <div class="form-common_item">
                             <label for="">Business Type</label>
                             <textarea name="" id="" cols="30" rows="5"></textarea>
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="inquiry-form_item">
+                        <div class="form-common_item">
                             <label for="">Request for Information</label>
                             <ul class="inquiry-form_list">
                                 <li class="inquiry-form_checkList">
@@ -521,17 +521,17 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="inquiry-form_item">
+                        <div class="form-common_item">
                             <label for="">Code<span>*</span></label>
-                            <div class="inquiry-form_code d-flex align-items-center">
+                            <div class="form-common_code d-flex align-items-center">
                                 <input type="text">
-                                <div class="inquiry-form_code_pic"><img src="./public/img/certify.png" alt=""></div>
+                                <div class="form-common_code_pic"><img src="./public/img/certify.png" alt=""></div>
                                 <div class="btn-change"><img src="./public/img/icon_transfer.svg" alt=""></div>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="inquiry-form_item inquiry-form_btn d-flex justify-content-end">
+                        <div class="form-common_item inquiry-form_btn d-flex justify-content-end">
                             <button class="inquiry-form_btnItem">SUBMIT</button><div class="inquiry-form_btnItem btn-clear">CLEAR</div>
                         </div>
                     </div>
