--- a/news-content.html
+++ b/news-content.html
@@ -29,11 +29,16 @@
                 <nav class="header_nav d-lg-flex">
                     <ul class="header_nav_hasdrop header_nav_first d-lg-flex">
                         <li class="header_nav_item">
-                            <a href="./product.html">
-                                <span>Product</span>
-                            </a>
+                            <a href="./product.html" class="d-lg-inline-block d-none">Product</a>
+                            <span class="header_nav_titleM d-lg-none d-flex align-items-center justify-content-between">
+                                <div>Product</div>
+                                <img class="header_nav_arrow" src="./public/img/arrow-white-right.svg" alt="">
+                            </span>
                             <div class="header_nav_drop">
                                 <ul>
+                                    <li class="header_nav_drop_item d-lg-none">
+                                        <a href="./product.html">Product</a>
+                                    </li>
                                     <li class="header_nav_drop_item">
                                         <a class="header_nav_drop_link" href="./product-list.html">Universal Tool & Cutter Grinder</a>
                                         <div class="header_nav_pic"><img src="./public/img/product-PP-32N.png" alt=""></div>
@@ -86,9 +91,16 @@
                             </div>
                         </li>
                         <li class="header_nav_item">
-                            <a href="./application.html">Application</a>
+                            <a href="./application.html" class="d-lg-inline-block d-none">Application</a>
+                            <span class="header_nav_titleM d-lg-none d-flex align-items-center justify-content-between">
+                                <div>Application</div>
+                                <img class="header_nav_arrow" src="./public/img/arrow-white-right.svg" alt="">
+                            </span>
                             <div class="header_nav_drop">
                                 <ul>
+                                    <li class="header_nav_drop_item d-lg-none">
+                                        <a href="./application.html">Application</a>
+                                    </li>
                                     <li class="header_nav_drop_item">
                                         <a class="header_nav_drop_link" href="./application-content.html">aerospace industry</a>
                                         <div class="header_nav_pic"><img src="./public/img/application-pic-1.png" alt=""></div>
@@ -121,7 +133,10 @@
                             </div>
                         </li>
                         <li class="header_nav_item active">
-                            <a>Media</a>
+                            <span class="header_nav_titleM d-flex align-items-center justify-content-between">
+                                <div>Media</div>
+                                <img class="header_nav_arrow" src="./public/img/arrow-white-right.svg" alt="">
+                            </span>
                             <div class="header_nav_drop">
                                 <ul>
                                     <li class="header_nav_drop_item">
@@ -142,7 +157,10 @@
                             </div>
                         </li>
                         <li class="header_nav_item">
-                            <a>Support</a>
+                            <span class="header_nav_titleM d-flex align-items-center justify-content-between">
+                                <div>Support</div>
+                                <img class="header_nav_arrow" src="./public/img/arrow-white-right.svg" alt="">
+                            </span>
                             <div class="header_nav_drop">
                                 <ul>
                                     <li class="header_nav_drop_item">
@@ -155,7 +173,10 @@
                             </div>
                         </li>
                         <li class="header_nav_item">
-                            <a>About</a>
+                            <span class="header_nav_titleM d-flex align-items-center justify-content-between">
+                                <div>About</div>
+                                <img class="header_nav_arrow" src="./public/img/arrow-white-right.svg" alt="">
+                            </span>
                             <div class="header_nav_drop">
                                 <ul>
                                     <li class="header_nav_drop_item">
