--- a/eng/introduction.html
+++ b/eng/introduction.html
@@ -34,58 +34,46 @@
                                 <div>Product</div>
                                 <img class="header_nav_arrow" src="../public/img/arrow-white-right.svg" alt="">
                             </span>
-                            <div class="header_nav_drop">
+                            <div class="header_nav_drop nav-big">
                                 <ul>
                                     <li class="header_nav_drop_item d-lg-none">
                                         <a href="./product.html">Product</a>
                                     </li>
                                     <li class="header_nav_drop_item">
                                         <a class="header_nav_drop_link" href="./product-list.html">Universal Tool & Cutter Grinder</a>
-                                        <div class="header_nav_pic"><img src="../public/img/product-PP-32N.png" alt=""></div>
                                     </li>
                                     <li class="header_nav_drop_item">
                                         <a class="header_nav_drop_link" href="./product-list.html">Tool Grinder</a>
-                                        <div class="header_nav_pic"><img src="../public/img/product-PP-25.png" alt=""></div>
                                     </li>
                                     <li class="header_nav_drop_item">
                                         <a class="header_nav_drop_link" href="./product-list.html">Universal Cutter Grinder</a>
-                                        <div class="header_nav_pic"><img src="../public/img/product-PP-U2.png" alt=""></div>
                                     </li>
                                     <li class="header_nav_drop_item">
                                         <a class="header_nav_drop_link" href="./product-list.html">Portable Drill & End Mill Grinder</a>
-                                        <div class="header_nav_pic"><img src="../public/img/product-PP-13D.png" alt=""></div>
                                     </li>
                                     <li class="header_nav_drop_item">
                                         <a class="header_nav_drop_link" href="./product-list.html">Diamond & PCBN Tool Grinder (PP-DM / PP-DM II)</a>
-                                        <div class="header_nav_pic"><img src="../public/img/product-PP-DM.png" alt=""></div>
                                     </li>
                                     <li class="header_nav_drop_item">
                                         <a class="header_nav_drop_link" href="./product-list.html">Spindle/ Holder Polishing Machines</a>
-                                        <div class="header_nav_pic"><img src="../public/img/product-PP-A1.png" alt=""></div>
                                     </li>
                                     <li class="header_nav_drop_item">
                                         <a class="header_nav_drop_link" href="./product-list.html">Straight Knife Grinder</a>
-                                        <div class="header_nav_pic"><img src="../public/img/product-PP-500.png" alt=""></div>
                                     </li>
                                     <li class="header_nav_drop_item">
                                         <a class="header_nav_drop_link" href="./product-list.html">Cutting-off Machine</a>
-                                        <div class="header_nav_pic"><img src="../public/img/product-PP-26.png" alt=""></div>
                                     </li>
                                     <li class="header_nav_drop_item">
                                         <a class="header_nav_drop_link" href="./product-list.html">Conventional Lathe</a>
-                                        <div class="header_nav_pic"><img src="../public/img/product-PP-13SG.png" alt=""></div>
                                     </li>
                                     <li class="header_nav_drop_item">
                                         <a class="header_nav_drop_link" href="./product-list.html">Machine Accessories</a>
-                                        <div class="header_nav_pic"><img src="../public/img/product-PP-13SX.png" alt=""></div>
                                     </li>
                                     <li class="header_nav_drop_item">
                                         <a class="header_nav_drop_link" href="./product-list.html">Core Drill</a>
-                                        <div class="header_nav_pic"><img src="../public/img/product-PP-13X.png" alt=""></div>
                                     </li>
                                     <li class="header_nav_drop_item">
                                         <a class="header_nav_drop_link" href="./product-list.html">Aluminum Alloy Swivel Discoid/ Lazy Susan</a>
-                                        <div class="header_nav_pic"><img src="../public/img/product-PP-16C.png" alt=""></div>
                                     </li>
                                 </ul>
                             </div>
@@ -96,38 +84,31 @@
                                 <div>Application</div>
                                 <img class="header_nav_arrow" src="../public/img/arrow-white-right.svg" alt="">
                             </span>
-                            <div class="header_nav_drop">
+                            <div class="header_nav_drop nav-medium">
                                 <ul>
                                     <li class="header_nav_drop_item d-lg-none">
                                         <a href="./application.html">Application</a>
                                     </li>
                                     <li class="header_nav_drop_item">
-                                        <a class="header_nav_drop_link" href="./application-content.html">aerospace industry</a>
-                                        <div class="header_nav_pic"><img src="../public/img/application-pic-1.png" alt=""></div>
+                                        <a class="header_nav_drop_link" href="./application-content.html">Aerospace Industry</a>
                                     </li>
                                     <li class="header_nav_drop_item">
-                                        <a class="header_nav_drop_link" href="./application-content.html">medical industry</a>
-                                        <div class="header_nav_pic"><img src="../public/img/application-pic-2.png" alt=""></div>
+                                        <a class="header_nav_drop_link" href="./application-content.html">Medical Industry</a>
                                     </li>
                                     <li class="header_nav_drop_item">
-                                        <a class="header_nav_drop_link" href="./application-content.html">auto industry</a>
-                                        <div class="header_nav_pic"><img src="../public/img/application-pic-3.png" alt=""></div>
+                                        <a class="header_nav_drop_link" href="./application-content.html">Auto Industry</a>
                                     </li>
                                     <li class="header_nav_drop_item">
-                                        <a class="header_nav_drop_link" href="./application-content.html">semiconductor industry</a>
-                                        <div class="header_nav_pic"><img src="../public/img/application-pic-4.png" alt=""></div>
+                                        <a class="header_nav_drop_link" href="./application-content.html">Semiconductor Industry</a>
                                     </li>
                                     <li class="header_nav_drop_item">
-                                        <a class="header_nav_drop_link" href="./application-content.html">Optoelectronics industry</a>
-                                        <div class="header_nav_pic"><img src="../public/img/application-pic-5.png" alt=""></div>
+                                        <a class="header_nav_drop_link" href="./application-content.html">Optoelectronics Industry</a>
                                     </li>
                                     <li class="header_nav_drop_item">
-                                        <a class="header_nav_drop_link" href="./application-content.html">3C industry</a>
-                                        <div class="header_nav_pic"><img src="../public/img/application-pic-6.png" alt=""></div>
+                                        <a class="header_nav_drop_link" href="./application-content.html">3C Industry</a>
                                     </li>
                                     <li class="header_nav_drop_item">
-                                        <a class="header_nav_drop_link" href="./application-content.html">Tool repair</a>
-                                        <div class="header_nav_pic"><img src="../public/img/application-pic-7.png" alt=""></div>
+                                        <a class="header_nav_drop_link" href="./application-content.html">Tool Repair</a>
                                     </li>
                                 </ul>
                             </div>
@@ -137,10 +118,10 @@
                                 <div>Media</div>
                                 <img class="header_nav_arrow" src="../public/img/arrow-white-right.svg" alt="">
                             </span>
-                            <div class="header_nav_drop">
+                            <div class="header_nav_drop nav-medium">
                                 <ul>
                                     <li class="header_nav_drop_item">
-                                        <a class="header_nav_drop_link" href="">News</a>
+                                        <a class="header_nav_drop_link">News</a>
                                         <ul class="header_nav_seconddrop">
                                             <li><a href="./news.html">Exhibition</a></li>
                                             <li><a href="./news.html">News</a></li>
@@ -166,9 +147,9 @@
                                     <li class="header_nav_drop_item">
                                         <a class="header_nav_drop_link" href="./qa.html">Q&A</a>
                                     </li>
-                                    <li class="header_nav_drop_item">
+                                    <!-- <li class="header_nav_drop_item">
                                         <a class="header_nav_drop_link" href="./news.html">Blog</a>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </div>
                         </li>
@@ -352,14 +333,14 @@
                     <div class="col-lg-4 mt-lg-0 mt-5">
                         <div class="row">
                             <div class="col-lg-6 col-4">
-                                <h3><a href="./application.html">Application</a></h3>
-                                <h3><a href="./news.html">Media</a></h3>
+                                <h3><a href="./introduction.html">About</a></h3>
+                                <h3><a href="./contact.html">Contact</a></h3>
                             </div>
                             <div class="col-lg-6 col-4">
                                 <ul>
+                                    <h3><a href="./application.html">Application</a></h3>
+                                    <h3><a href="./news.html">Media</a></h3>
                                     <h3><a href="./qa.html">Support</a></h3>
-                                    <h3><a href="./introduction.html">About</a></h3>
-                                    <h3><a href="./contact.html">Contact</a></h3>
                                 </ul>
                             </div>
                         </div>
