--- a/eng/product-content.html
+++ b/eng/product-content.html
@@ -37,7 +37,7 @@
                             <div class="header_nav_drop nav-big">
                                 <ul>
                                     <li class="header_nav_drop_item d-lg-none">
-                                        <a href="./product.html">Product</a>
+                                        <a href="./product.html">All</a>
                                     </li>
                                     <li class="header_nav_drop_item">
                                         <a class="header_nav_drop_link" href="./product-list.html">Universal Tool & Cutter Grinder</a>
@@ -87,7 +87,7 @@
                             <div class="header_nav_drop nav-medium">
                                 <ul>
                                     <li class="header_nav_drop_item d-lg-none">
-                                        <a href="./application.html">Application</a>
+                                        <a href="./application.html">All</a>
                                     </li>
                                     <li class="header_nav_drop_item">
                                         <a class="header_nav_drop_link" href="./application-content.html">Aerospace Industry</a>
