--- a/eng/application.html
+++ b/eng/application.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../public/css/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="../public/css/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="../public/css/aos/aos.css">
-    <link rel="stylesheet" href="../public/css/style.css">
+    <link rel="stylesheet" href="../public/css/style.css?20220915">
 </head>
 <body>
     <div class="nav_lightBox"></div>
@@ -27,7 +27,7 @@
             </a>
             <div class="d-flex align-items-center">
                 <nav class="header_nav d-lg-flex">
-                    <ul class="header_nav_hasdrop header_nav_first d-lg-flex">
+                    <ul class="header_nav_first d-lg-flex">
                         <li class="header_nav_item">
                             <a href="./product.html" class="d-lg-inline-block d-none">Product</a>
                             <span class="header_nav_titleM d-lg-none d-flex align-items-center justify-content-between">
@@ -138,20 +138,7 @@
                             </div>
                         </li>
                         <li class="header_nav_item">
-                            <span class="header_nav_titleM d-flex align-items-center justify-content-between">
-                                <div>Support</div>
-                                <img class="header_nav_arrow" src="../public/img/arrow-white-right.svg" alt="">
-                            </span>
-                            <div class="header_nav_drop">
-                                <ul>
-                                    <li class="header_nav_drop_item">
-                                        <a class="header_nav_drop_link" href="./qa.html">Q&A</a>
-                                    </li>
-                                    <!-- <li class="header_nav_drop_item">
-                                        <a class="header_nav_drop_link" href="./news.html">Blog</a>
-                                    </li> -->
-                                </ul>
-                            </div>
+                            <a href="./qa.html">Q&A</a>
                         </li>
                         <li class="header_nav_item">
                             <span class="header_nav_titleM d-flex align-items-center justify-content-between">
@@ -172,8 +159,6 @@
                                 </ul>
                             </div>
                         </li>
-                    </ul>
-                    <ul class="header_nav_first">
                         <li class="header_nav_item"><a href="./contact.html">Contact</a></li>
                     </ul>
                     <div class="header_func d-lg-none">
@@ -364,15 +349,15 @@
                     <div class="col-lg-4 mt-lg-0 mt-5">
                         <div class="row">
                             <div class="col-lg-6 col-4">
-                                <h3><a href="./introduction.html">About</a></h3>
-                                <h3><a href="./contact.html">Contact</a></h3>
-                            </div>
-                            <div class="col-lg-6 col-4">
                                 <ul>
                                     <h3><a href="./application.html">Application</a></h3>
                                     <h3><a href="./news.html">Media</a></h3>
                                     <h3><a href="./qa.html">Support</a></h3>
                                 </ul>
+                            </div>
+                            <div class="col-lg-6 col-4">
+                                <h3><a href="./introduction.html">About</a></h3>
+                                <h3><a href="./contact.html">Contact</a></h3>
                             </div>
                         </div>
                     </div>
