--- a/eng/contact.html
+++ b/eng/contact.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../public/css/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="../public/css/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="../public/css/aos/aos.css">
-    <link rel="stylesheet" href="../public/css/style.css">
+    <link rel="stylesheet" href="../public/css/style.css?20220915">
 </head>
 <body>
     <div class="nav_lightBox"></div>
@@ -27,7 +27,7 @@
             </a>
             <div class="d-flex align-items-center">
                 <nav class="header_nav d-lg-flex">
-                    <ul class="header_nav_hasdrop header_nav_first d-lg-flex">
+                    <ul class="header_nav_first d-lg-flex">
                         <li class="header_nav_item">
                             <a href="./product.html" class="d-lg-inline-block d-none">Product</a>
                             <span class="header_nav_titleM d-lg-none d-flex align-items-center justify-content-between">
@@ -138,20 +138,7 @@
                             </div>
                         </li>
                         <li class="header_nav_item">
-                            <span class="header_nav_titleM d-flex align-items-center justify-content-between">
-                                <div>Support</div>
-                                <img class="header_nav_arrow" src="../public/img/arrow-white-right.svg" alt="">
-                            </span>
-                            <div class="header_nav_drop">
-                                <ul>
-                                    <li class="header_nav_drop_item">
-                                        <a class="header_nav_drop_link" href="./qa.html">Q&A</a>
-                                    </li>
-                                    <!-- <li class="header_nav_drop_item">
-                                        <a class="header_nav_drop_link" href="./news.html">Blog</a>
-                                    </li> -->
-                                </ul>
-                            </div>
+                            <a href="./qa.html">Q&A</a>
                         </li>
                         <li class="header_nav_item">
                             <span class="header_nav_titleM d-flex align-items-center justify-content-between">
@@ -172,8 +159,6 @@
                                 </ul>
                             </div>
                         </li>
-                    </ul>
-                    <ul class="header_nav_first">
                         <li class="header_nav_item active"><a href="./contact.html">Contact</a></li>
                     </ul>
                     <div class="header_func d-lg-none">
@@ -310,6 +295,9 @@
                         </div>
                     </div>
                 </form>
+                <div class="contact_map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3640.171345052725!2d120.59339361505496!3d24.16572288438627!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34693e3e0b4d1b95%3A0xbc828a453b8bdf9e!2zNDA35Y-w5Lit5biC6KW_5bGv5Y2A5bel5qWt5Y2A5LiJ5Y2B5LqM6LevNzHomZ8!5e0!3m2!1szh-TW!2stw!4v1663042672177!5m2!1szh-TW!2stw" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </div>
             <div class="contact_inform">
                 <div class="contact_inform_item">
@@ -329,9 +317,6 @@
                     <span>service@pei-ping.com</span>
                 </div>
             </div>
-        </div>
-        <div class="contact_map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3640.171345052725!2d120.59339361505496!3d24.16572288438627!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34693e3e0b4d1b95%3A0xbc828a453b8bdf9e!2zNDA35Y-w5Lit5biC6KW_5bGv5Y2A5bel5qWt5Y2A5LiJ5Y2B5LqM6LevNzHomZ8!5e0!3m2!1szh-TW!2stw!4v1663042672177!5m2!1szh-TW!2stw" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </main>
 
@@ -361,15 +346,15 @@
                     <div class="col-lg-4 mt-lg-0 mt-5">
                         <div class="row">
                             <div class="col-lg-6 col-4">
-                                <h3><a href="./introduction.html">About</a></h3>
-                                <h3><a href="./contact.html">Contact</a></h3>
-                            </div>
-                            <div class="col-lg-6 col-4">
                                 <ul>
                                     <h3><a href="./application.html">Application</a></h3>
                                     <h3><a href="./news.html">Media</a></h3>
                                     <h3><a href="./qa.html">Support</a></h3>
                                 </ul>
+                            </div>
+                            <div class="col-lg-6 col-4">
+                                <h3><a href="./introduction.html">About</a></h3>
+                                <h3><a href="./contact.html">Contact</a></h3>
                             </div>
                         </div>
                     </div>
