--- a/eng/qa.html
+++ b/eng/qa.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../public/css/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="../public/css/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="../public/css/aos/aos.css">
-    <link rel="stylesheet" href="../public/css/style.css">
+    <link rel="stylesheet" href="../public/css/style.css?20220915">
 </head>
 <body>
     <div class="nav_lightBox"></div>
@@ -27,7 +27,7 @@
             </a>
             <div class="d-flex align-items-center">
                 <nav class="header_nav d-lg-flex">
-                    <ul class="header_nav_hasdrop header_nav_first d-lg-flex">
+                    <ul class="header_nav_first d-lg-flex">
                         <li class="header_nav_item">
                             <a href="./product.html" class="d-lg-inline-block d-none">Product</a>
                             <span class="header_nav_titleM d-lg-none d-flex align-items-center justify-content-between">
@@ -138,20 +138,7 @@
                             </div>
                         </li>
                         <li class="header_nav_item active">
-                            <span class="header_nav_titleM d-flex align-items-center justify-content-between">
-                                <div>Support</div>
-                                <img class="header_nav_arrow" src="../public/img/arrow-white-right.svg" alt="">
-                            </span>
-                            <div class="header_nav_drop">
-                                <ul>
-                                    <li class="header_nav_drop_item">
-                                        <a class="header_nav_drop_link" href="./qa.html">Q&A</a>
-                                    </li>
-                                    <!-- <li class="header_nav_drop_item">
-                                        <a class="header_nav_drop_link" href="./news.html">Blog</a>
-                                    </li> -->
-                                </ul>
-                            </div>
+                            <a href="./qa.html">Q&A</a>
                         </li>
                         <li class="header_nav_item">
                             <span class="header_nav_titleM d-flex align-items-center justify-content-between">
@@ -172,8 +159,6 @@
                                 </ul>
                             </div>
                         </li>
-                    </ul>
-                    <ul class="header_nav_first">
                         <li class="header_nav_item"><a href="./contact.html">Contact</a></li>
                     </ul>
                     <div class="header_func d-lg-none">
@@ -264,7 +249,7 @@
             </ol>
         </nav>
         
-        <ul class="nav nav-tabs tab-common tab-qa" id="qaTab" role="tablist">
+        <ul class="nav nav-tabs tab-common tab-class tab-qa" id="qaTab" role="tablist">
             <li class="nav-item" role="presentation">
               <button class="nav-link active" id="qa1-tab" data-bs-toggle="tab" data-bs-target="#qa1" type="button" role="tab" aria-controls="qa1" aria-selected="true"><span>classification1</span></button>
             </li>
@@ -275,6 +260,24 @@
               <button class="nav-link" id="qa3-tab" data-bs-toggle="tab" data-bs-target="#qa3" type="button" role="tab" aria-controls="qa3" aria-selected="false"><span>classification3</span></button>
             </li>
         </ul>
+
+        <div class="tab-class-m">
+            <div class="container">
+                <div class="tab-class-m_inner">
+                    <div class="tab-class_active">
+                        <span>classification1</span>
+                        <img src="../public/img/arrow-black-right.svg" alt="">
+                    </div>
+                    <div class="tab-class_hide">
+                        <ul>
+                            <li class="active" data-tab="#qa1-tab" data-tabContent="#qa1">classification1</li>
+                            <li data-tab="#qa2-tab" data-tabContent="#qa2">classification2</li>
+                            <li data-tab="#qa3-tab" data-tabContent="#qa3">classification3</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div class="tab-content" id="qaTabContent">
             <div class="tab-pane fade show active" id="qa1" role="tabpanel" aria-labelledby="qa1-tab">
@@ -529,15 +532,15 @@
                     <div class="col-lg-4 mt-lg-0 mt-5">
                         <div class="row">
                             <div class="col-lg-6 col-4">
-                                <h3><a href="./introduction.html">About</a></h3>
-                                <h3><a href="./contact.html">Contact</a></h3>
-                            </div>
-                            <div class="col-lg-6 col-4">
                                 <ul>
                                     <h3><a href="./application.html">Application</a></h3>
                                     <h3><a href="./news.html">Media</a></h3>
                                     <h3><a href="./qa.html">Support</a></h3>
                                 </ul>
+                            </div>
+                            <div class="col-lg-6 col-4">
+                                <h3><a href="./introduction.html">About</a></h3>
+                                <h3><a href="./contact.html">Contact</a></h3>
                             </div>
                         </div>
                     </div>
